--- a/index.html
+++ b/index.html
@@ -65,7 +65,127 @@
 	<![endif]-->
 
 	</head>
+
+	<style>		
+		.overlay {
+			height: 0%;
+			width: 100%;
+			position: fixed;
+			z-index: 5000;
+			top: 0;
+			left: 0;
+			background-image:linear-gradient( 180deg ,rgba(0,4,10,0.36) 68%,#000c0f 100%),url(images/foto4.jpg)!important;
+			background-size: cover;
+			background-position: center;
+			overflow-y: hidden;
+			transition: 0.5s;
+		}
+		
+		.overlay-content {
+			position: relative;
+			top: 25%;
+			width: 100%;
+			text-align: center;
+			margin-top: 30px;
+		}
+
+		.text-inner {
+			position: relative;
+		}
+
+		.text-inner p {
+			font-family: 'Work Sans',Helvetica,Arial,Lucida,sans-serif;
+			color: #ffff;
+			font-weight: 550;
+		}
+
+		.text-inner h2 {
+			font-family: 'Work Sans',Helvetica,Arial,Lucida,sans-serif;
+			font-size: 26px;
+			color: #ffff;
+			font-weight: 700;
+		}
+
+		.text-inner h3 {
+			font-family: 'Work Sans',Helvetica,Arial,Lucida,sans-serif;
+			font-size: 18px;
+			color: #ffff;
+			font-weight: 600;
+		}
+
+		.text-inner h1 {
+			font-family: 'Sacramento',Helvetica,Arial,Lucida,sans-serif;
+			font-size: 36px;
+			color: #ffffff!important;
+			line-height: 3em;
+		}
+		
+		.overlay a {
+			padding: 8px;
+			text-decoration: none;
+			font-size: 36px;
+			color: #0000;
+			display: block;
+			transition: 0.3s;
+		}
+		
+		.overlay button:hover, .overlay button:focus {
+			color: #0000;
+		}
+		
+		.overlay .closebtn {
+			position: absolute;
+			height: 50px;
+			bottom: 10%;
+			left: 30%;
+			font-size: 15px;
+		}
+		
+		@media screen and (max-height: 450px) {
+			.overlay {overflow-y: auto;}
+			.overlay a {font-size: 20px}
+			.overlay .closebtn {
+			bottom: 10%;
+			left: 30%;
+			font-size: 15px;
+			}
+		}
+		
+		@media screen and (max-height: 767px) {
+			.overlay {overflow-y: auto;}
+			.overlay a {font-size: 20px}
+			.overlay .closebtn {
+			bottom: 10%;
+			left: 30%;
+			font-size: 15px;
+			}
+		}
+		
+		@media screen and (max-height: 980px) {
+			.overlay {overflow-y: auto;}
+			.overlay a {font-size: 20px}
+			.overlay .closebtn {
+			bottom: 10%;
+			left: 30%;
+			font-size: 15px;
+			}
+		}
+	</style>
+
 	<body>
+	
+	<div id="myNav" class="overlay">
+		<button class="btn text-dark closebtn" onclick="closeNav();playAudio();">Open Invitation</button>
+		<div class="overlay-content">
+			<div class="text-inner">
+				<h3>Dear,</h3>
+				<p> Calon Nganten </p>
+				<h2>You’re Invited!</h2>
+				<p>The Wedding Celebration of</p>
+				<h1>Lajeng &amp; Ade</h1>
+			</div>
+		</div>
+	</div>
 		
 	<div class="fh5co-loader"></div>
 	
@@ -106,22 +226,8 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/header.jpg);" data-stellar-background-ratio="1">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/header.jpg);min-height: 100%;background-size: cover;" data-stellar-background-ratio="1">
 		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Kiki &amp; Dimas</h1>
-							<h2>We Are Getting Married</h2>
-							<!-- <div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</header>
 
 	<div id="fh5co-couple">
@@ -139,8 +245,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
+					<h2>Will Be Happy!</h2>
+					<h3>February 20th, 2021 Sleman, Yogyakarta</h3>
 					<p>We invited you to celebrate our wedding</p>
 				</div>
 			</div>
@@ -150,8 +256,8 @@
 						<img src="images/PP1.png" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>dr. Kiki Zoelyana</h3>
-						<p>Putri Pertama dari Bapak Zulkarnain & Ibu Mariana</p>
+						<h3>Lajeng Padmaratri</h3>
+						<p>Putri Pertama dari Bapak Sumartana & Ibu Dyah Fitri Wijayanti</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -160,8 +266,8 @@
 						<img src="images/PP2.png" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Dimas Arif Prasetya, S.Kom</h3>
-						<p>Putra Kedua dari Bapak Hartono & Ibu Siti Nursikhah</p>
+						<h3>Ade Prasetya</h3>
+						<p>Putra Pertama dari Bapak Sardi & Ibu Narsiyem</p>
 					</div>
 				</div>
 			</div>
@@ -191,10 +297,10 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Sabtu</span>
-										<span>22 Mei 2021</span>
+										<span>Minggu</span>
+										<span>20 February 2021</span>
 									</div>
-									<p>Jalan Yos Sudarso Km 14,5 Kp. Bahari No. 61 Martubung, Medan Labuhan.</p>
+									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -202,15 +308,15 @@
 									<h3>Resepsi</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>13.00</span>
+										<span>10.00</span>
 										<span>- selesai</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Sabtu</span>
-										<span>22 Mei 2021</span>
+										<span>Minggu</span>
+										<span>20 February 2021</span>
 									</div>
-									<p>Jalan Yos Sudarso Km 14,5 Kp. Bahari No. 61 Martubung, Medan Labuhan.</p>
+									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
 							</div>
 						</div>
@@ -237,7 +343,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Pertemuan Pertama</h3>
-									<span class="date">December 25, 2015</span>
+									<span class="date">December 20, 2019</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -249,7 +355,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Pacaran</h3>
-									<span class="date">December 28, 2015</span>
+									<span class="date">Oktober 10, 2020</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -261,7 +367,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Lamaran</h3>
-									<span class="date">January 1, 2016</span>
+									<span class="date">November 21, 2021</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -548,7 +654,10 @@
 
 		</div>
 	</footer>
-	<audio src="./audio/Christina-Perri-A-Thousand-Years-PianoCello-Cover.mp3" hidden autoplay></audio>
+	<audio id="myAudio">
+		<source src="./audio/Christina-Perri-A-Thousand-Years-PianoCello-Cover.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+	  </audio>
 	</div>
 
 	<div class="gototop js-top">
@@ -599,6 +708,23 @@
 </script>
 
 <script>
+
+	var music = document.getElementById("myAudio");
+
+	function playAudio() {
+		music.play();
+	}
+
+
+	openNav();
+	function openNav() {
+	document.getElementById("myNav").style.height = "100%";
+	}
+
+	function closeNav() {
+	document.getElementById("myNav").style.height = "0%";
+	}
+
 	// Set the date we're counting down to
 	var countDownDate = new Date("Jan 5, 2022 15:37:25").getTime();
 
