--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Lajeng & Ade</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -655,7 +655,7 @@
 		</div>
 	</footer>
 	<audio id="myAudio">
-		<source src="./audio/Christina-Perri-A-Thousand-Years-PianoCello-Cover.mp3" type="audio/mpeg">
+		<source src="./audio/Can't take my eyes of you Aesthetic Lyrics.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	  </audio>
 	</div>
