--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Will Be Happy!</h2>
-					<h3>February 20th, 2021 Sleman, Yogyakarta</h3>
+					<h3>February 20th, 2022 Sleman, Yogyakarta</h3>
 					<p>We invited you to celebrate our wedding</p>
 				</div>
 			</div>
@@ -274,7 +274,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_5.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -298,7 +298,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Minggu</span>
-										<span>20 February 2021</span>
+										<span>20 February 2022</span>
 									</div>
 									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
@@ -314,7 +314,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Minggu</span>
-										<span>20 February 2021</span>
+										<span>20 February 2022</span>
 									</div>
 									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
@@ -394,17 +394,17 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto1.jpg); "> 
-						<a href="images/foto1.jpg">
+						<a href="javascript:void(0);">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
+								<!-- <span>14 Photos</span> -->
 								<h2>Two Glas of Juice</h2>
 							</div>
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto2.jpg); ">
-						<a href="#" class="color-2">
+						<a href="javascript:void(0);" class="color-2">
 							<div class="case-studies-summary">
-								<span>30 Photos</span>
+								<!-- <span>30 Photos</span> -->
 								<h2>Timer starts now!</h2>
 							</div>
 						</a>
@@ -412,34 +412,34 @@
 
 
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto3.jpg); ">
-						<a href="#" class="color-3">
+						<a href="javascript:void(0);" class="color-3">
 							<div class="case-studies-summary">
-								<span>90 Photos</span>
+								<!-- <span>90 Photos</span> -->
 								<h2>Beautiful sunset</h2>
 							</div>
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto4.jpg); ">
-						<a href="#" class="color-4">
+						<a href="javascript:void(0);" class="color-4">
 							<div class="case-studies-summary">
-								<span>12 Photos</span>
+								<!-- <span>12 Photos</span> -->
 								<h2>Company's Conference Room</h2>
 							</div>
 						</a>
 					</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto5.jpg); ">
-							<a href="#" class="color-3">
+							<a href="javascript:void(0);" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
+									<!-- <span>50 Photos</span> -->
 									<h2>Useful baskets</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/foto6.jpg); ">
-							<a href="#" class="color-4">
+							<a href="javascript:void(0);" class="color-4">
 								<div class="case-studies-summary">
-									<span>45 Photos</span>
+									<!-- <span>45 Photos</span> -->
 									<h2>Skater man in the road</h2>
 								</div>
 							</a>
@@ -488,7 +488,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-testimonial">
+	<!-- <div id="fh5co-testimonial">
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
@@ -540,7 +540,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="fh5co-services" class="fh5co-section-gray">
 		<div class="container">
@@ -584,13 +584,6 @@
 						</div>
 					</div>
 
-				</div>
-
-				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
 				</div>
 			</div>
 
@@ -638,8 +631,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2022 AdheCode. All Rights Reserved.</small> 
+						<small class="block">Designed by <a href="https://github.com/AdheCode" target="_blank">AdheCode</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
