feat(audio): change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			z-index: 5000;
 			top: 0;
 			left: 0;
-			background-image:linear-gradient( 180deg ,rgba(0,4,10,0.36) 68%,#000c0f 100%),url(images/foto4.jpg)!important;
+			background-image:linear-gradient( 180deg ,rgba(0,4,10,0.36) 68%,#000c0f 100%),url(images/overlay.jpg)!important;
 			background-size: cover;
 			background-position: center;
 			overflow-y: hidden;
@@ -117,7 +117,7 @@
 
 		.text-inner h1 {
 			font-family: 'Dancing Script',Helvetica,Arial,Lucida,sans-serif;
-			font-size: 36px;
+			font-size: 50px;
 			color: #ffffff!important;
 		}
 		
@@ -203,26 +203,17 @@
 			display: block;
 			margin-bottom: -1px;
 		}
-
-		#map {
-			height: 300px;
-			/* The height is 400 pixels */
-			width: 100%;
-			/* The width is the width of the web page */
-		}
 	</style>
 
 	<body>
 	
 	<div id="myNav" class="overlay">
-		<button class="btn text-dark closebtn" onclick="closeNav();playAudio();">Open Invitation</button>
+		<button class="btn text-dark closebtn" onclick="closeNav();playAudio();">Buka Undangan</button>
 		<div class="overlay-content">
 			<div class="text-inner">
-				<h3>Dear,</h3>
-				<p> Calon Nganten </p>
-				<h2>You’re Invited!</h2>
-				<p>The Wedding Celebration of</p>
 				<h1>Lajeng &amp; Ade</h1>
+				<h3>Kpd. Bpk/Ibu/Saudara/i</h3>
+				<p> Calon Nganten </p>
 			</div>
 		</div>
 	</div>
@@ -286,9 +277,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Will Be Happy!</h2>
+					<h2>Assalamu'alaikum wr.wb.</h2>
 					<h3>February 20th, 2022 Sleman, Yogyakarta</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<p>Dengan memohon rahmat dan ridho Allah SWT, Mohon do'a restu Bapak/Ibu/Saudara dalam rangka melangsungkan pernikahan putra putri kami :</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -367,7 +358,7 @@
 		</div>
 	</div>
 
-	<div id="map"></div>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15812.232445001304!2d110.3353301!3d-7.7836638!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90da59cb888ae8e4!2sOMAH%20KOPI%20COKROWIJAYAN!5e0!3m2!1sid!2sid!4v1641515624026!5m2!1sid!2sid" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 	<div id="fh5co-counter" class="fh5co-bg fh5co-counter">
 		<a href="https://logwork.com/countdown-ssfk" class="countdown-timer" data-style="columns" data-textcolor="#ffff" data-date="2022-02-20 07:00" data-background="#ffff" data-digitscolor="#ffff" data-unitscolor="#ffff">Countdown Timer</a>
@@ -393,7 +384,7 @@
 									<span class="date">December 20, 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Kita dipertemukan oleh Ibu teman kita di suatu tempat makan di Kulonprogo.</p>
 								</div>
 							</div>
 						</li>
@@ -405,7 +396,7 @@
 									<span class="date">Oktober 10, 2020</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Setelah kenal beberapa waktu akhirnya kita memutuskan untuk komitmen dan saling berjanji untuk setia.</p>
 								</div>
 							</div>
 						</li>
@@ -417,7 +408,7 @@
 									<span class="date">November 21, 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Di hari itu keluaga kami saling bertemu dan berkenalan, Alhamdulillah berjalan lancar dan kita semua setuju segera menentukan tanggal akad nikah.</p>
 								</div>
 							</div>
 						</li>
@@ -502,7 +493,7 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Information</h2>
+					<h2>Health Protocols</h2>
 					<p>Dalam upaya mengurangi penyebaran Covid 19 pada masa pandemi, kami harapkan kedatangan para tamu undangan agar menjalankan protokol yang berlaku.</p>
 				</div>
 			</div>
@@ -600,7 +591,7 @@
 		</div>
 	</footer>
 	<audio id="myAudio">
-		<source src="./audio/Can't take my eyes of you Aesthetic Lyrics.mp3" type="audio/mpeg">
+		<source src="./audio/Sotya-Versi-Gending-Gamelan-Jawa-Ayem-Ning-Ati.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	  </audio>
 	</div>
@@ -633,7 +624,6 @@
 
 	<script src="https://cdn.logwork.com/widget/countdown.js"></script>
 
-	<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlNgD-0h2i9sbHAtFwgZBEhoS4Aq6CDQY&callback=initMap&libraries=&v=weekly">
 </script>
 
 <script>
@@ -643,24 +633,6 @@
 	function playAudio() {
 		music.play();
 	}
-
-	// Initialize and add the map
-	function initMap() {
-		// The location of Uluru
-		const uluru = { lat: -7.7836638, lng: 110.3353301 };
-		// The map, centered at Uluru
-		const map = new google.maps.Map(document.getElementById("map"), {
-			zoom: 7,
-			center: uluru,
-			mapTypeId: 'roadmap'
-		});
-		// The marker, positioned at Uluru
-		const marker = new google.maps.Marker({
-			position: uluru,
-			map: map,
-		});
-	}
-
 
 	openNav();
 	function openNav() {
