feat(image): update template

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Lajeng & Ade</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Template by AdheCode" />
+	<meta name="keywords" content="Wedding Invitation Lajeng & Ade" />
+	<meta name="author" content="AdheCode" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -27,6 +27,11 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
+	<meta property="og:image" content="url(images/header2.jpg)">
+	<meta property="og:image:type" content="image/png">
+	<meta property="og:image:width" content="1024">
+	<meta property="og:image:height" content="1024">
+	<meta property="og:type" content="website" />
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -38,7 +43,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=DM+Serif+Display" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -213,7 +218,7 @@
 			<div class="text-inner">
 				<h1>Lajeng &amp; Ade</h1>
 				<h3>Kpd. Bpk/Ibu/Saudara/i</h3>
-				<p> Calon Nganten </p>
+				<p> Dyar Ayu Kusuma </p>
 			</div>
 		</div>
 	</div>
@@ -224,8 +229,8 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+				<div class="col-auto">
+					<div id="fh5co-logo"><a href="index.html">The Wedding</a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -267,7 +272,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<q>Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya dan Dia menjadikan di antara kamu rasa kasih dan sayang. Sungguh, pada demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berfikir.</q>
-					<h4 style="margin-top: 20px;">( QS. Ar- Rum 21 )</h4>
+					<p style="margin-top: 20px;"><b>( QS. Ar- Rum 21 )</b></p>
 				</div>
 			</div>
 		</div>
@@ -277,9 +282,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Assalamu'alaikum wr.wb.</h2>
-					<h3>February 20th, 2022 Sleman, Yogyakarta</h3>
-					<p>Dengan memohon rahmat dan ridho Allah SWT, Mohon do'a restu Bapak/Ibu/Saudara dalam rangka melangsungkan pernikahan putra putri kami :</p>
+					<h2>Assalamu'alaikum</h2>
+					<p>Dengan memohon rahmat dan ridho Allah SWT, mohon do'a restu Bapak/Ibu/Saudara dalam rangka melangsungkan pernikahan kami :</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -289,6 +293,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Lajeng Padmaratri</h3>
+						<a href="#"><i class="icon-instagram icon-large"></i></a>
 						<p>Putri Pertama dari Bapak Sumartana & Ibu Dyah Fitri Wijayanti</p>
 					</div>
 				</div>
@@ -299,6 +304,7 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Ade Prasetya</h3>
+						<a href="#"><i class="icon-instagram icon-large"></i></a>
 						<p>Putra Pertama dari Bapak Sardi & Ibu Narsiyem</p>
 					</div>
 				</div>
@@ -311,8 +317,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Special Events</span>
-					<h2>Wedding Events</h2>
+					<!-- <span>Our Special Events</span> -->
+					<h2>Momen Bahagia</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -325,13 +331,14 @@
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>08.00</span>
-										<span>- selesai</span>
+										<span>- 09.00</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Minggu</span>
 										<span>20 February 2022</span>
 									</div>
+									<p>*) Khusus keluarga mempelai</p>
 									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
 							</div>
@@ -341,7 +348,7 @@
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>10.00</span>
-										<span>- selesai</span>
+										<span>- 11.00</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -361,10 +368,10 @@
 	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15812.232445001304!2d110.3353301!3d-7.7836638!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90da59cb888ae8e4!2sOMAH%20KOPI%20COKROWIJAYAN!5e0!3m2!1sid!2sid!4v1641515624026!5m2!1sid!2sid" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 	<div id="fh5co-counter" class="fh5co-bg fh5co-counter">
-		<a href="https://logwork.com/countdown-ssfk" class="countdown-timer" data-style="columns" data-textcolor="#ffff" data-date="2022-02-20 07:00" data-background="#ffff" data-digitscolor="#ffff" data-unitscolor="#ffff">Countdown Timer</a>
+		<a href="https://logwork.com/countdown-ssfk" class="countdown-timer" data-style="columns" data-textcolor="#ffff" data-date="2022-02-20 07:00"  data-background="#ffff" data-digitscolor="#764125" data-unitscolor="#764125">Countdown Timer</a>
 	</div>
 
-	<div id="fh5co-couple-story">
+	<!-- <div id="fh5co-couple-story">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -416,15 +423,15 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="fh5co-gallery" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<!-- <span>Our Memories</span> -->
+					<h2>Galeri Foto</h2>
+					<p>Dan pada akhirnya masing-masing perjalanan kami berhenti pada titik yang sama. Sebuah awal mula untuk melangkah seirama.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -435,7 +442,7 @@
 						<a href="javascript:void(0);">
 							<div class="case-studies-summary">
 								<!-- <span>14 Photos</span> -->
-								<h2>Two Glas of Juice</h2>
+								<h2>Api Asmara Membara</h2>
 							</div>
 						</a>
 					</li>
@@ -493,8 +500,8 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Health Protocols</h2>
-					<p>Dalam upaya mengurangi penyebaran Covid 19 pada masa pandemi, kami harapkan kedatangan para tamu undangan agar menjalankan protokol yang berlaku.</p>
+					<h2>Protokol Kesehatan</h2>
+					<p>Tanpa mengurangi rasa hormat, mohon tetap mematuhi protokol kesehatan yang berlaku demi mencegah penyebaran Covid-19.</p>
 				</div>
 			</div>
 
@@ -505,7 +512,7 @@
 							<i class="icon-calendar"></i>
 						</span>
 						<div class="feature-copy">
-							<p>Wajib Menggunakan Masker.</p>
+							<p>Wajib Menggunakan Masker</p>
 						</div>
 					</div>
 
@@ -514,7 +521,7 @@
 							<i class="icon-users"></i>
 						</span>
 						<div class="feature-copy">
-							<p>Saling Menjaga Jarak di Dalam Acara.</p>
+							<p>Saling Menjaga Jarak di Dalam Acara</p>
 						</div>
 					</div>
 
@@ -523,7 +530,7 @@
 							<i class="icon-video"></i>
 						</span>
 						<div class="feature-copy">
-							<p>Menghindari Kerumunan</p>
+							<p>Mencuci Tangan dengan Sabun</p>
 						</div>
 					</div>
 
@@ -540,8 +547,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+					<h2>Kirim Ucapan</h2>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -549,18 +555,18 @@
 					<form class="form-inline">
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
+								<label for="name" class="sr-only">Nama</label>
+								<input type="name" class="form-control" id="name" placeholder="Nama">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
+								<label for="pesan" class="sr-only">Ucapan</label>
+								<textarea class="form-control" id="pesan" placeholder="Ucapan" rows="3"></textarea>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
+							<button type="submit" class="btn btn-default btn-block">Kirim</button>
 						</div>
 					</form>
 				</div>
@@ -591,7 +597,7 @@
 		</div>
 	</footer>
 	<audio id="myAudio">
-		<source src="./audio/Sotya-Versi-Gending-Gamelan-Jawa-Ayem-Ning-Ati.mp3" type="audio/mpeg">
+		<source src="./audio/Marry-Your-Daughter-Brian-McKnight.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	  </audio>
 	</div>
