--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
+	<link rel="shortcut icon" href="./images/header2.jpg" />
+
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<!-- <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=DM+Serif+Display" rel="stylesheet">
