--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Lajeng & Ade</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Template by AdheCode" />
+	<meta name="description" content="Wedding Invitation" />
 	<meta name="keywords" content="Wedding Invitation Lajeng & Ade" />
 	<meta name="author" content="AdheCode" />
 
@@ -27,7 +27,7 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:image" content="url(images/header2.jpg)">
+	<meta property="og:image" content="./images/header2.jpg">
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="1024">
 	<meta property="og:image:height" content="1024">
