feat(test): image

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Minggu</span>
-										<span>20 February 2022</span>
+										<span>20 Februari 2022</span>
 									</div>
 									<p>*) Khusus keluarga mempelai</p>
 									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
@@ -355,7 +355,7 @@
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>Minggu</span>
-										<span>20 February 2022</span>
+										<span>20 Februari 2022</span>
 									</div>
 									<p>Omah Kopi Cokrowijayan, Gamping, Sleman</p>
 								</div>
@@ -444,7 +444,7 @@
 						<a href="javascript:void(0);">
 							<div class="case-studies-summary">
 								<!-- <span>14 Photos</span> -->
-								<h2>Api Asmara Membara</h2>
+								<h2>Time Traveller</h2>
 							</div>
 						</a>
 					</li>
@@ -452,7 +452,7 @@
 						<a href="javascript:void(0);" class="color-2">
 							<div class="case-studies-summary">
 								<!-- <span>30 Photos</span> -->
-								<h2>Timer starts now!</h2>
+								<h2>You are the Universe!</h2>
 							</div>
 						</a>
 					</li>
@@ -462,7 +462,7 @@
 						<a href="javascript:void(0);" class="color-3">
 							<div class="case-studies-summary">
 								<!-- <span>90 Photos</span> -->
-								<h2>Beautiful sunset</h2>
+								<h2>Beautiful Smile of Love</h2>
 							</div>
 						</a>
 					</li>
@@ -470,7 +470,7 @@
 						<a href="javascript:void(0);" class="color-4">
 							<div class="case-studies-summary">
 								<!-- <span>12 Photos</span> -->
-								<h2>Company's Conference Room</h2>
+								<h2>Catch Me Breath</h2>
 							</div>
 						</a>
 					</li>
@@ -479,7 +479,7 @@
 							<a href="javascript:void(0);" class="color-3">
 								<div class="case-studies-summary">
 									<!-- <span>50 Photos</span> -->
-									<h2>Useful baskets</h2>
+									<h2>Library of My Mind</h2>
 								</div>
 							</a>
 						</li>
@@ -487,7 +487,7 @@
 							<a href="javascript:void(0);" class="color-4">
 								<div class="case-studies-summary">
 									<!-- <span>45 Photos</span> -->
-									<h2>Skater man in the road</h2>
+									<h2>The House</h2>
 								</div>
 							</a>
 						</li>
