feat(test): image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:image" content="./images/header2.jpg">
+	<meta property="og:image" content="https://adhecode.github.io/haribaik/images/header2.jpg">
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="1024">
 	<meta property="og:image:height" content="1024">
@@ -42,7 +42,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link rel="shortcut icon" href="./images/header2.jpg" />
+	<link rel="shortcut icon" href="https://adhecode.github.io/haribaik/images/header2.jpg" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<!-- <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> -->
